--- a/app/globals.css
+++ b/app/globals.css
@@ -45,4 +45,7 @@
   .login-form input {
     @apply border border-black/20 rounded-md px-4 py-2;
   }
+  .sonner-text {
+    @apply text-slate-200 text-lg
+  }
 }
